--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>Profile-SAI PHANINDRA</title>
 <body>
 <hr>
-<img src="C:\Users\LENOVO\Desktop\CHANTI\Phani.jpeg" width=190px title="Enthusiasist" <br>
+       <img src="Phani.jpeg">
 <br>
 <big><big><big><b>Name</b>:<Times New Roman>Sai Phanindra GANDLA</Times New Roman><br></big></big></big>
 <big><big><big><big><b>Age</b>:<Times New Roman>17yrs(as per 2022)</Times New Roman><br></big></big></big>
